# mbse

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
old/src/mbse/: TODO_CLI.md  __init__.py
old/src/mbse/model/: __init__.py
old/src/mbse/model/hsm/: __init__.py  (+2 more)
old/src/mbse/runtime/: __init__.py
old/src/mbse_web_viewer/: __init__.py  main.py
old/src/mbse_web_viewer/app/: runtime_bridge.py  server.py  session.py  viewer_state_types.py
old/src/mbse_web_viewer/static/: index.html  viewer.css  viewer.js
old/src/mbse_web_viewer/svg_render/: __init__.py  render.py  render_types.py
old/test_hsm/: activities.py  hsm.json  run_demo.py
old/tests/: conftest.py
old/tests/integration/: test_generated_hsm_engine.py  test_hsm_json_workbench.py  test_mbse_session_build.py  test_mbse_workbench.py
old/tests/support/: hsm_callable_fixtures.py  hsm_payloads.py  viewer_browser_harness.py
old/tests/unit/mbse/: test_cli_main.py  test_generated_engine.py  test_hsm_render_view.py  test_hsm_runtime.py  test_hsm_validation.py  test_prepare_hsm_engine.py  test_svg_contract.py  test_test_hsm_demo.py  test_validation.py  test_web_runtime_bridge.py
src/mbse/model/doc/: model.md
src/mbse/model/hsm/: hsm_model.json  hsm_model.py
src/mbse/runtime/: runtime.py  runtime_signals.py
src/mbse/runtime/activity/: activity_runtime.py
src/mbse/runtime/doc/: runtime.md
src/mbse/runtime/hsm/: hsm_runtime.py
src/mbse_web_viewer/render/activity/: activity_render.py  activity_render_helpers.py
src/mbse_web_viewer/render/doc/: render.md
src/mbse_web_viewer/render/hsm/: hsm_render.dot.j2  hsm_render.py  hsm_render_helpers.py  hsm_render_types.py
src/mbse_web_viewer/server/: controller.py  http_server.py  model_catalog.py  session.py  viewer_app.py
src/mbse_web_viewer/server/debugging/: activity_breakpoints.py  hsm_breakpoints.py
src/mbse_web_viewer/static/: index.html  viewer.css  viewer.js  viewer_breakpoints.js  viewer_debugger.js  viewer_highlights.js  viewer_models.js  viewer_state.js  viewer_viewport.js
tests/: __init__.py  conftest.py  test_hsm_model_reference.py  test_hsm_runtime_reference.py
tests/fixtures/: reference_hsm_model.json
tests/mbse/runtime/: test_runtime.py
tests/mbse_web_viewer/server/: test_hsm_server.py
tests/reference_model/: __init__.py
tests/reference_model/activity/: __init__.py  reference_activity_executables.py  reference_activity_model.json
tests/reference_model/context/: __init__.py  reference_context_model.json
tests/reference_model/hsm/: __init__.py  reference_hsm_callables.py  reference_hsm_executables.py  reference_hsm_model.json
tests/reference_model/project/: __init__.py  reference_project.json
tests/support/: reference_hsm_callables.py
(+50 files in other folders)
