[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbse"
dynamic = ["version"]
description = "Python runtime and local web viewer for MBSE JSON models."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["mbse", "modeling", "runtime", "state-machine"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "Jinja2>=3.1,<4",
  "jsonschema>=4.26,<5",
  "referencing>=0.36,<1",
]

[project.scripts]
mbse-view = "mbse_web_viewer.server.viewer_app:main"

[project.urls]
Repository = "https://github.com/ferran-bofill-elausa/mbse"
Issues = "https://github.com/ferran-bofill-elausa/mbse/issues"

[project.optional-dependencies]
test = [
  "pytest>=9,<10",
  "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
"*" = [
  "*.css",
  "*.html",
  "*.j2",
  "*.js",
  "*.json",
  "*.md",
  "*.svg",
]

[tool.ruff]
line-length = 80
indent-width = 2
target-version = "py311"

[tool.ruff.lint]
# TODO: Restore "I" and fix the existing import ordering violations.
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes (real errors)
]

# TODO: Fix the existing violations and remove these exceptions.
ignore = [
  "E402",  # Module docstrings intentionally follow future imports.
  "E501",  # Existing source has not yet been wrapped to the configured width.
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
